# thesaurus

./: .gitignore  LICENSE  README.md  pyproject.toml
src/thesaurus/: __init__.py  cli.py  thesaurus.py
